# Distributed-Incident-Response-Orchestrator

./: .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: __init__.py  app.py  environment.py
