[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-response-env"
version = "0.1.0"
description = "Deterministic OpenEnv-style incident response simulation environment"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Rahul" }
]

dependencies = [
    "pydantic",
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]